@@ -1,25 +1,112 @@
 package com.smartfactory.erp.service;
 
 import com.smartfactory.erp.dto.BomDto;
-import com.smartfactory.erp.entity.BomEntity;
+import com.smartfactory.erp.entity.*;
 import com.smartfactory.erp.repository.BomRepository;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true) // 클래스 레벨에서 읽기 전용으로 설정
 public class BomService {
-    //레파지토리 선언
+
     private final BomRepository bomRepository;
-    //전체 조회
-    public List<BomDto> getAllSearch(){
-        List<BomEntity> bomEntityList = bomRepository.findAll();
-        return bomEntityList.stream()
+
+    /**
+     * BOM 생성 (Create)
+     */
+    @Transactional // 쓰기 작업이므로 readOnly=false 적용
+    public BomDto createBom(BomDto bomDto) {
+        BomEntity bomEntity = bomDto.toEntity();
+        BomEntity savedEntity = bomRepository.save(bomEntity);
+        return BomDto.fromEntity(savedEntity);
+    }
+
+    /**
+     * BOM 단일 조회 (Read by ID)
+     */
+    public BomDto getBomById(Integer id) {
+        BomEntity bomEntity = bomRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("BOM not found with id: " + id));
+        return BomDto.fromEntity(bomEntity);
+    }
+
+    /**
+     * 동적 조회: 선박 ID로 BOM 조회 (Search)
+     */
+    public List<BomDto> searchBomsByVesselId(String vesselId) {
+        Specification<BomEntity> spec = (root, query, cb) -> {
+            if (vesselId != null && !vesselId.trim().isEmpty()) {
+                return cb.like(root.get("vessel").get("vesselId"), "%" + vesselId + "%");
+            }
+            return null; // 조건이 없으면 모든 BOM을 반환
+        };
+
+        List<BomEntity> entities = bomRepository.findAll(spec);
+
+        return entities.stream()
                 .map(BomDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * BOM 수정 (Update)
+     */
+    @Transactional // 쓰기 작업
+    public BomDto updateBom(Integer id, BomDto bomDto) {
+        // 1. ID로 기존 엔티티 조회
+        BomEntity existingBom = bomRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("BOM not found with id: " + id));
+
+        // 2. DTO의 정보로 엔티티 필드 업데이트
+        existingBom.setRequiredQuantity(bomDto.getRequiredQuantity());
+        existingBom.setUnit(bomDto.getUnit());
+        existingBom.setRemark(bomDto.getRemark());
+
+        // 3. 연관관계 업데이트 (ID가 변경된 경우에만)
+        if (bomDto.getVesselId() != null) {
+            VesselEntity vessel = new VesselEntity();
+            vessel.setVesselId(bomDto.getVesselId());
+            existingBom.setVessel(vessel);
+        }
+        if (bomDto.getProcessId() != null) {
+            ProcessEntity process = new ProcessEntity();
+            process.setProcessId(bomDto.getProcessId());
+            existingBom.setProcess(process);
+        }
+        if (bomDto.getBlockId() != null) {
+            BlockEntity block = new BlockEntity();
+            block.setBlockId(bomDto.getBlockId());
+            existingBom.setBlock(block);
+        }
+        if (bomDto.getMaterialId() != null) {
+            MaterialEntity material = new MaterialEntity();
+            material.setMaterialId(bomDto.getMaterialId());
+            existingBom.setMaterial(material);
+        }
+
+        // 4. JPA의 더티 체킹(dirty checking)에 의해 트랜잭션 종료 시 자동으로 업데이트 쿼리 실행
+        // 명시적으로 save를 호출할 필요는 없지만, 가독성을 위해 호출하기도 함.
+        // BomEntity updatedEntity = bomRepository.save(existingBom);
+
+        return BomDto.fromEntity(existingBom);
+    }
+
+    /**
+     * BOM 삭제 (Delete)
+     */
+    @Transactional // 쓰기 작업
+    public void deleteBom(Integer id) {
+        if (!bomRepository.existsById(id)) {
+            throw new EntityNotFoundException("BOM not found with id: " + id);
+        }
+        bomRepository.deleteById(id);
     }
 }
